# StringZilla

./: .clang-format  .cmake-format.py  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .npmignore  .prettierrc  .releaserc  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  Package.swift  README.md  StringZilla.csproj  binding.gyp  build.rs  build_backend.py  example.ipynb  levenshtein.ipynb  main.cpp  main.py  package-ci.json  package-lock.json  package.json  pom.xml  pyproject.toml  run.sh  search.hpp  setup.py  stringzilla.hpp  substr_seach_macros.hpp  substr_search.cpp  substr_search.hpp  substr_search.js  (+4 more)
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: Dockerfile.libs  build_tools.sh  codeql.yml  pre_cibuildwheel.sh  prerelease-wheels.yml  prerelease.yml  release.yml  update_version.sh
bench/: README.md  bench.hpp  container.cpp  find.cpp  fingerprints.cpp  fingerprints.cu  fingerprints.cuh  memory.cpp  sequence.cpp  shared.hpp  similarities.cpp  similarities.cu  similarities.cuh  substr_search.cpp  substr_search.hpp  substr_search.js  token.cpp  unique_strings.cpp  utf8_delimiters.cpp  utf8_iterate.cpp  utf8_norm.cpp  utf8_scan.cpp  utf8_segment.cpp  utf8_traverse.cpp  utf8_uncased.cpp
bench/results/: macbookpro.json
bench/scripts/: bench.sh  build.sh  install_dependencies.sh
c/: 64-bit-math-emulation.c  README.md  compare.c  find.c  hash.c  intersect.c  lib.c  lib.cu  memory.c  sort.c  stringzilla.c  stringzillas.cpp  stringzillas.cu  stringzillas.cuh  utf8.c  utf8_case.c  utf8_word.c
c/stringzilla/: compare.c  dispatch.h  find.c  hash.c  intersect.c  memory.c  runtime.c  sort.c  utf8_case_fold.c  utf8_case_insensitive.c  utf8_codepoints.c  utf8_delimiters.c  utf8_graphemes.c  utf8_iterate.c  utf8_linebreaks.c  utf8_lines.c  utf8_linewraps.c  utf8_norm.c  utf8_runes.c  utf8_sentences.c  utf8_tokens.c  utf8_uncased.c  utf8_uncased_fold.c  utf8_wordbreaks.c  utf8_words.c
c/stringzillas/: dispatch.h  fingerprints.c  fingerprints.cpp  fingerprints.cu  fingerprints.cuh  levenshtein.cpp  levenshtein.cu  levenshtein.cuh  levenshtein_cuda.cu  levenshtein_haswell.cpp  levenshtein_hopper.cu  levenshtein_icelake.cpp  levenshtein_kepler.cu  levenshtein_neon.cpp  levenshtein_rvv.cpp  levenshtein_serial.cpp  needleman_wunsch.cpp  needleman_wunsch.cu  needleman_wunsch.cuh  needleman_wunsch_cuda.cu  needleman_wunsch_haswell.cpp  needleman_wunsch_hopper.cu  needleman_wunsch_icelake.cpp  needleman_wunsch_neon.cpp  needleman_wunsch_rvv.cpp  needleman_wunsch_serial.cpp  runtime.c  runtime.cpp  runtime.cu  runtime.cuh  similarities.c  smith_waterman.cpp  smith_waterman.cu  smith_waterman.cuh  smith_waterman_cuda.cu  smith_waterman_haswell.cpp  smith_waterman_hopper.cu  smith_waterman_icelake.cpp  smith_waterman_neon.cpp  (+3 more)
cli/: README.md  split.py  wc.py
cmake/: dev.cmake  install-config.cmake  install-rules.cmake  stringzillaConfig.cmake.in  sz_arm_isa_probes.cmake  sz_isa_probe.cmake  sz_loongarch_isa_probes.cmake  sz_power_isa_probes.cmake  sz_riscv_isa_probes.cmake  sz_wasm_isa_probes.cmake  sz_x86_isa_probes.cmake  toolchain-aarch64.cmake  toolchain-loongarch64.cmake  toolchain-ppc64le.cmake  toolchain-riscv64.cmake  toolchain-wasi.cmake  toolchain-wasm32.cmake  warning-guard.cmake
csharp/: README.md  StringZilla.cs  StringZillaTests.cs  StringZillaTests.csproj
drafts/: bench_find_many.cpp  bench_find_many.cu  bench_find_many.cuh  bench_fingerprints.py  bitap.h  features.hpp  find_many.cuh  find_many.hpp  fingerprint.h  fingerprint.hpp  hash.h  memory.h  segments.hpp  sort.h  test_find_many.cuh  utf8.h
golang/: README.md  go.mod  lib.go  lib_sha256_test.go  lib_test.go
include/: module.modulemap
java/: README.md
javascript/: .eslintrc.json  README.md  lib.c  stringzilla.d.ts  stringzilla.js  test.js
probes/: arm_neon.c  arm_neonaes.c  arm_neonsha.c  arm_sve.c  arm_sve2.c  arm_sve2aes.c  loongarch_lasx.c  power_vsx.c  riscv_rvv.c  riscv_rvvcrypto.c  run_capabilities.c  runtime_detection.c  wasm_v128.c  wasm_v128relaxed.c  x86_goldmont.c  x86_haswell.c  x86_icelake.c  x86_skylake.c  x86_westmere.c
python/: README.md  lib.c  lib.cpp  stringzilla.c  stringzillas.c
rust/: README.md  lib.rs  rust-bindings.c  rust-bindings.h  stringzilla.rs  stringzillas.rs
scripts/: README.md  bench.go  bench.hpp  bench.ipynb  bench.py  bench.sh  bench_container.cpp  bench_find.cpp  bench_find.py  bench_find_many.cpp  bench_find_many.cu  bench_find_many.cuh  bench_fingerprint.cpp  bench_fingerprint.cu  bench_fingerprint.cuh  bench_fingerprint.py  bench_fingerprints.cpp  bench_fingerprints.cu  bench_fingerprints.cuh  bench_fingerprints.py  bench_levenshtein.py  bench_memory.cpp  bench_search.cpp  bench_search.py  bench_sequence.cpp  bench_sequence.py  bench_similarities.cpp  bench_similarities.cu  bench_similarities.cuh  bench_similarities.ipynb  bench_similarities.py  bench_similarity.cpp  bench_similarity.cu  bench_similarity.cuh  bench_similarity.ipynb  bench_sort.cpp  bench_substring.cpp  bench_token.cpp  bench_token.ipynb  bench_unicode.cpp  (+86 more)
src/: avx2.c  avx512.c  neon.c  serial.c  serial_sequence.c  sse.c  stringzilla.c
stringzilla/: pybind11.cpp  stringzilla.cpp  stringzilla.h  stringzilla.hpp
swift/: README.md  StringProtocol+StringZilla.swift  SwiftPackageManager.c  Test.swift
test/: README.md  conftest.py  doctests.py  find.cpp  find.py  fingerprints.cuh  fingerprints.py  hash.cpp  hash.py  helpers.py  similarities.cuh  similarities.py  sort.cpp  sort.py  string.cpp  string.py  stringzilla.cpp  stringzilla.hpp  stringzilla.js  stringzillas.cpp  stringzillas.cu  stringzillas.py  sz_helpers.py  szs_helpers.py  uncased.cpp  uncased.py  utf8.hpp  utf8_codepoints.py  utf8_delimiters.cpp  utf8_delimiters.py  utf8_graphemes.cpp  utf8_graphemes.py  utf8_helpers.py  utf8_linebreaks.cpp  utf8_linebreaks.py  utf8_linewraps.cpp  utf8_linewraps.py  utf8_norm.cpp  utf8_norm.py  utf8_runes.cpp  (+9 more)
(+350 files in other folders)
